# factorial

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DEPLOY.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SPECIFICATION.md  TODO.md  docker-compose.yml  mkdocs.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_add_conversations_messages_tool_calls.py  0001_initial_schema.py  0002_admin_events.py  0002_remove_other_role.py  0003_add_users_and_user_scoping.py  0003_chat_events.py  0004_add_signup_requests_table.py  0004_tool_call_telemetry.py  0005_add_api_cost_tracking.py  0005_signup_disclaimers.py  0006_add_experiment_shares.py  0006_user_feedback.py  0007_user_activity_balance.py  0008_admin_roles_and_setup_tokens.py  0008_simulators.py  0009_sessions.py  0010_remove_other_role.py  0011_byok_credentials.py
backend/src/app/: cli.py  config.py  logging_filters.py  main.py
backend/src/app/admin/: __init__.py  auth.py  mount.py  views.py
backend/src/app/api/: auth_cookies.py  csrf.py  deps.py
backend/src/app/api/v1/: router.py
backend/src/app/api/v1/endpoints/: admin_feedback.py  admin_users.py  auth.py  byok.py  chat.py  designs.py  experiments.py  feedback.py  health.py  mcp.py  roles.py  (+5 more)
backend/src/app/db/: session.py
backend/src/app/graph/: neo4j_driver.py
backend/src/app/models/: __init__.py  admin_event.py  byok_credentials_history.py  conversation.py  experiment.py  experiment_share.py  session.py  signup_request.py  simulator.py  tool_usage.py  user.py  user_balance.py  user_feedback.py
backend/src/app/schemas/: admin_event.py  admin_user.py  auth.py  byok.py  chat.py  designs.py  experiments.py  exports.py  feedback.py  role.py  shares.py  signup.py  tools.py  uploads.py
backend/src/app/services/: admin_event_service.py  admin_service.py  agent_loop.py  agent_service.py  anthropic_status.py  auth_service.py  balance_service.py  byok_anthropic_service.py  byok_service.py  byok_session_service.py  chart_render_service.py  doe_service.py  email_service.py  exceptions.py  experiment_service.py  export_service.py  feedback_emails.py  feedback_service.py  geoip_service.py  pricing.py  reproducible_export_service.py  role_service.py  session_service.py  setup_token_service.py  share_service.py  signup_service.py  simulator_interception.py  tool_budget.py  tools.py  turn_timing.py  upload_claude_service.py  upload_parsing_service.py
backend/templates/: experiment_report.html.j2  experiment_report.md.j2  reproducible_bundle_readme.md.j2  reproducible_report.md.j2
backend/tests/: conftest.py  test_admin_event_cli.py  test_admin_event_service.py  test_admin_event_service_list.py  test_admin_mount.py  test_admin_user_aggregates.py  test_admin_users_balance_api.py  test_agent_loop_plan.py  test_agent_service_anthropic_errors.py  test_anthropic_status.py  test_anthropic_status_snapshot.py  test_auth.py  test_balance_service.py  test_byok_lifecycle.py  test_byok_service.py  test_byok_session_service.py  test_chat.py  test_chat_resume.py  test_designs.py  test_experiments.py  test_experiments_shares_api.py  test_export_service.py  test_feedback.py  test_geoip_service.py  test_health.py  test_logging_filters.py  test_pricing.py  test_public_share_api.py  test_reproducible_export_service.py  test_security.py  test_sessions.py  test_share_service.py  test_signup_disclaimers.py  test_signup_workflow.py  test_simulator_flow.py  test_tools.py  test_tools_api.py  test_turn_timing.py  test_upload_claude_service.py  test_upload_endpoints.py  (+1 more)
(+123 files in other folders)
