[project]
name = "agentic-doe"
version = "0.6.0"
description = "Backend for AI agent-based Design of Experiments analysis"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.14.0",
    "neo4j>=5.26.0",
    "httpx>=0.28.0",
    "anthropic>=0.42.0",
    "sse-starlette>=2.0.0",
    "process-improve>=1.2.8",
    "slowapi>=0.1.9",
    "python-jose[cryptography]>=3.3.0",
    "passlib>=1.7.4",
    "bcrypt>=4.0,<5.0",
    "python-multipart>=0.0.9",
    "email-validator>=2.0",
    "aiosmtplib>=3.0.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.0",
    "weasyprint>=63.0",
    "playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
    "aiosqlite>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
]
ignore = [
    "S101",  # allow assert in tests
    "S104",  # allow binding to all interfaces (0.0.0.0) — intentional for Docker
    "S105",  # allow default passwords in Settings — overridden by .env in production
    "B008",  # allow Depends() in function defaults — standard FastAPI pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
